--- a/colabs/Poetry_generation.ipynb
+++ b/colabs/Poetry_generation.ipynb
@@ -6,7 +6,7 @@
       "name": "Poetry_generation.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMOiBD3gXxRAwMh1+UOQCeb",
+      "authorship_tag": "ABX9TyN/nCRNqQGPg/XZTUy4KFer",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
       "source": [
         "# Creating metrically correct and rhyming poetry with large language models\n",
         "\n",
-        "- you need to select a Colab runtime with high Ram and a GPU accelerator"
+        "- a Colab runtime with high Ram and a GPU accelerator needs to be selected"
       ],
       "metadata": {
         "id": "7lWrD9ZStllq"
@@ -109,7 +109,9 @@
       "cell_type": "code",
       "source": [
         "# since google colab is not an empty environment\n",
-        "!pip3 install torchvision==0.11.2 torchaudio==0.10.1 torchtext==0.11.1"
+        "!pip3 install torchvision==0.11.2 torchaudio==0.10.1 torchtext==0.11.1\n",
+        "\n",
+        "!mkdir output"
       ],
       "metadata": {
         "id": "Y2yUkAg3j2kY"
@@ -140,7 +142,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## If you would like to use GPT3"
+        "## If GPT3 should be used\n",
+        "Example for syntax: \n",
+        "\n",
+        "%env OPENAI_API_KEY=jr-mdhcvu9kd"
       ],
       "metadata": {
         "id": "GYkIulPhWGat"
@@ -149,8 +154,8 @@
     {
       "cell_type": "code",
       "source": [
-        "%env OPENAI_API_KEY=\"\"\n",
-        "%env OPENAI_API_ID=\"\""
+        "%env OPENAI_API_KEY=\n",
+        "%env OPENAI_API_ID="
       ],
       "metadata": {
         "id": "IWnXwCllS9ei"
@@ -161,7 +166,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## If you would like to check the rhyme of words using the spectrogram of the tts generated words\n",
+        "## If the spectrogram of words created with Amazon Polly should be used to detect rhymes\n",
         "\n",
         "Amazon AWS credentials for using Polly\n"
       ],
@@ -172,8 +177,8 @@
     {
       "cell_type": "code",
       "source": [
-        "%env POLLY_API_KEY=\"\"\n",
-        "%env POLLY_API_ID=\"\""
+        "%env POLLY_API_KEY=\n",
+        "%env POLLY_API_ID="
       ],
       "metadata": {
         "id": "MHK9-P5FTEsV"
@@ -203,6 +208,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Define the inputs"
+      ],
+      "metadata": {
+        "id": "vllbsFIT2U-k"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "jambus = [0,1]\n",
@@ -226,6 +240,16 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Start generating\n",
+        "the result will be saved in llm_poetry_generation/output"
+      ],
+      "metadata": {
+        "id": "rdsKBsyN2bJr"
+      }
     },
     {
       "cell_type": "code",
