--- a/colabs/Poetry_generation.ipynb
+++ b/colabs/Poetry_generation.ipynb
@@ -6,7 +6,6 @@
       "name": "Poetry_generation.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyN/nCRNqQGPg/XZTUy4KFer",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -267,6 +266,126 @@
       "metadata": {
         "id": "kg7OewrTTeBx",
         "collapsed": true
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Finding rhymes for existing poetry"
+      ],
+      "metadata": {
+        "id": "c9dOm0xBfBcy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from rythm_utils import verse_cl\n"
+      ],
+      "metadata": {
+        "id": "k8uGr6dJNL6T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "poem = '''Da geht er hinaus in den Wald, \n",
+        "von Gedanken gezogen und erfüllt,\n",
+        "das Licht gar unerreichbar scheint,\n",
+        "doch nun ist es soweit er sieht'''\n",
+        "\n",
+        "rhyming_lines = [1,3]"
+      ],
+      "metadata": {
+        "id": "NGc52hDJNVor"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rhyming_lines.sort()\n",
+        "\n",
+        "text_lst = poem.split('\\n')\n",
+        "verse_lst = [verse_cl(text) for text in text_lst]\n",
+        "\n",
+        "idx_1 = rhyming_lines[0]-1\n",
+        "idx_2 = rhyming_lines[1]-1\n",
+        "\n",
+        "\n",
+        "verse_lst[idx_1].context = ' '.join(text_lst[:idx_1])    \n",
+        "verse_lst[idx_2].context = ' '.join(text_lst[:idx_2])\n"
+      ],
+      "metadata": {
+        "id": "oMyA-jPTfOZN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from rhyme import find_rhyme"
+      ],
+      "metadata": {
+        "id": "wB3HH9CEfT5k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Start the search\n",
+        "\n",
+        "the function above is first creating alternatives for the verse endings with gpt and bert. It returns the alternatives for both verses as list (first and second). It also checks if some alternatives would rhyme with different methods"
+      ],
+      "metadata": {
+        "id": "qUtpfE0Ofi6C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "_, first, second = find_rhyme(verse_lst,\n",
+        "                              idx_1,\n",
+        "                              idx_2,\n",
+        "                              [],\n",
+        "                              last_stress = -2, \n",
+        "                              detection_method ='neural',\n",
+        "                              LLM='GPT2-large',\n",
+        "                              use_tts = False,\n",
+        "                              return_alternatives=True)"
+      ],
+      "metadata": {
+        "id": "8N0kfEVLfV1b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "first"
+      ],
+      "metadata": {
+        "id": "Nca3cAcvgAFI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "second"
+      ],
+      "metadata": {
+        "id": "iQ4yEc9DgBGq"
       },
       "execution_count": null,
       "outputs": []
