--- a/colabs/Poetry_generation.ipynb
+++ b/colabs/Poetry_generation.ipynb
@@ -77,10 +77,41 @@
         "!nvidia-smi"
       ],
       "metadata": {
-        "id": "spcA5xw8c5IG"
+        "id": "spcA5xw8c5IG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4ee4280e-8f78-4461-9e0c-e441f5faaf90"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Wed Jun 22 17:16:07 2022       \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
+            "|-------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                               |                      |               MIG M. |\n",
+            "|===============================+======================+======================|\n",
+            "|   0  Tesla P100-PCIE...  Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   43C    P0    30W / 250W |      0MiB / 16280MiB |      0%      Default |\n",
+            "|                               |                      |                  N/A |\n",
+            "+-------------------------------+----------------------+----------------------+\n",
+            "                                                                               \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| Processes:                                                                  |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+            "|        ID   ID                                                   Usage      |\n",
+            "|=============================================================================|\n",
+            "|  No running processes found                                                 |\n",
+            "+-----------------------------------------------------------------------------+\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -389,6 +420,284 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# The inner workings of the rhyme detections mechanism\n",
+        "## Method 1: colone phonetics\n",
+        "https://de.wikipedia.org/wiki/K%C3%B6lner_Phonetik\n",
+        "\n",
+        "The words are converted into a number while the distance between the numbers reflect the difference in the sound of the words.\n"
+      ],
+      "metadata": {
+        "id": "d8y9pZwiX0gX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from rhyme_detection.colone_phonetics import colone_phonetics"
+      ],
+      "metadata": {
+        "id": "lmDmYVOFXZ5V"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "colone_phonetics('Gedicht')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WWn70krAXdJ4",
+        "outputId": "1aac3282-3e5b-4027-e996-ac4b9214c06f"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[4, 0, 2, 0, 4, 2]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Method 2: siamese recurrent network\n",
+        "The network maps the words into a vectorspace. Words that are rhyming are closer to each other compared to non rhyming pairs"
+      ],
+      "metadata": {
+        "id": "e6YGrKJ5YhT0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sia_rhyme.siamese_rhyme import siamese_rhyme\n",
+        "rhyme_model = siamese_rhyme()"
+      ],
+      "metadata": {
+        "id": "slTIsyBwXe9S"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector_1 = rhyme_model.get_word_vec('gehen')\n",
+        "vector_1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZZzRTq3TXgVb",
+        "outputId": "c04e8657-5f41-4267-b074-f347bb55cf92"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-0.5856,  0.7474,  0.1178, -0.0544, -0.0271,  0.3719, -0.2101,  0.4195,\n",
+              "          0.3779,  0.0342, -0.4246, -0.3210,  0.7679, -0.0753,  0.0470,  0.0611,\n",
+              "          0.0807, -0.0652, -0.3461,  0.4887, -0.1806,  0.0458, -0.2565,  0.4855,\n",
+              "          0.1426, -0.0724,  0.4419,  0.3535, -0.2769,  0.0636, -0.1953,  0.3511,\n",
+              "          0.7090,  0.8421,  0.6162,  0.5989,  0.6668, -0.3263, -0.7324,  0.3969,\n",
+              "         -0.1411, -0.0125,  0.0048,  0.0571, -0.1915, -0.1740,  0.4161, -0.3785,\n",
+              "         -0.3235,  0.8206,  0.4755,  0.2791,  0.0385, -0.1753,  0.1664,  0.4155,\n",
+              "         -0.4856, -0.1417,  0.0729, -0.6723, -0.2852, -0.3127,  0.2243, -0.0176,\n",
+              "          0.2686,  0.0457, -0.0650,  0.3836, -0.3010, -0.2898,  0.6069,  0.3057,\n",
+              "         -0.6498, -0.6421,  0.0050,  0.4717,  0.0602, -0.5515,  0.3163,  0.4609,\n",
+              "         -0.4097, -0.8044,  0.3902,  0.1557,  0.6025, -0.2303,  0.0567, -0.7864,\n",
+              "         -0.0780, -0.1755, -0.3927, -0.8881,  0.4535, -0.4321,  0.1614, -0.0957,\n",
+              "         -0.3500,  0.3394,  0.4920, -0.7076,  0.4003, -0.5089,  0.2852,  0.0332,\n",
+              "         -0.6161,  0.3279, -1.0132, -0.8240,  0.7656, -0.1559, -0.6582,  0.0342,\n",
+              "          0.5463, -0.0887, -0.3521,  0.4942,  0.4880,  0.1909, -0.4377,  0.2040,\n",
+              "         -0.4325, -0.0802,  0.3339, -0.5792,  0.2015, -0.4499, -0.0174,  0.1122]],\n",
+              "       device='cuda:0', grad_fn=<AddmmBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector_2 = rhyme_model.get_word_vec('sägen')"
+      ],
+      "metadata": {
+        "id": "qwIY8MlkXh0O"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rhyme_model.vector_distance(vector_1,vector_2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SgeEb3ZDXkCb",
+        "outputId": "12854b0e-7fde-40bf-86a6-6685b514d888"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.16701883], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Finding the rythm of words\n",
+        "\n",
+        "The words are translated into the IPA phonetic alphabet. This notation contains signs for primary and secondary word stress. In the output a non stressed syllable is translated to 0, a secondary stress to 0.5 and a primary stress to 1. Words that have no word stress get a 0 or 1 dependent on the type of the word"
+      ],
+      "metadata": {
+        "id": "_ZZ0t1liZF6g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from rythm_utils import get_rythm"
+      ],
+      "metadata": {
+        "id": "W3P9V7RjXljh"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_rythm('Bibliothek')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oByEedgzXm_R",
+        "outputId": "0c361beb-4ddd-4784-c500-07bede00c739"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 0., 1.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from ortho_to_ipa.ortho_to_ipa import ortho_to_ipa\n",
+        "import os\n",
+        "\n",
+        "dirname = ''\n",
+        "m_path = os.path.join(dirname, 'ortho_to_ipa/model')\n",
+        "\n",
+        "otoi = ortho_to_ipa(load = True,fname_ortho= m_path +'/ortho.pt',\n",
+        "                    fname_ipa=m_path +'/ipa.pt',fname_model=m_path +'/ortho_to_ipa.pt')"
+      ],
+      "metadata": {
+        "id": "NnhMA7fAXo_f"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "otoi.translate('seyn')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "ZESmtPcmXqVF",
+        "outputId": "a1ef5cf2-a1cb-49b3-956d-34ae8428bdd6"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'zɛɪ̯n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "otoi.translate('eynerley')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "722U0OV4XrpI",
+        "outputId": "83343147-9c7d-42dc-d3ae-409d594bf978"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'ˈaɪ̯nɐllɪ̯'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     }
   ]
 }
