--- a/colabs/Poetry_generation.ipynb
+++ b/colabs/Poetry_generation.ipynb
@@ -424,11 +424,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# The inner workings of the rhyme detections mechanism\n",
+        "# The inner workings of the rhyme detection mechanism\n",
+        "\n",
+        "Method 3 - comparing the mfcc features of words - is explained in an other colab notebook\n",
         "## Method 1: colone phonetics\n",
         "https://de.wikipedia.org/wiki/K%C3%B6lner_Phonetik\n",
         "\n",
-        "The words are converted into a number while the distance between the numbers reflect the difference in the sound of the words.\n"
+        "The words are converted into a number while the distance between the numbers reflect the difference in the sound of the words.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "d8y9pZwiX0gX"
