--- a/colabs/Poetry_generation.ipynb
+++ b/colabs/Poetry_generation.ipynb
@@ -34,7 +34,18 @@
       "source": [
         "# Creating metrically correct and rhyming poetry with large language models\n",
         "\n",
-        "- a Colab runtime with high Ram and a GPU accelerator needs to be selected"
+        "- a Colab runtime with high Ram needs to be selected\n",
+        "- it may take a while until everything is loaded\n",
+        "- click the 'Run all' button\n",
+        "\n",
+        "\n",
+        "<img src = 'https://github.com/andjoer/llm_poetry_generation/blob/main/graphics/colab_en.jpg?raw=true'>\n",
+        "\n",
+        "German\n",
+        "\n",
+        "\n",
+        "\n",
+        "<img src = 'https://github.com/andjoer/llm_poetry_generation/blob/main/graphics/colab.jpg?raw=true'>\n"
       ],
       "metadata": {
         "id": "7lWrD9ZStllq"
@@ -83,7 +94,7 @@
         },
         "outputId": "4ee4280e-8f78-4461-9e0c-e441f5faaf90"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,7 +457,7 @@
       "metadata": {
         "id": "lmDmYVOFXZ5V"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -461,7 +472,7 @@
         "id": "WWn70krAXdJ4",
         "outputId": "1aac3282-3e5b-4027-e996-ac4b9214c06f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -494,7 +505,7 @@
       "metadata": {
         "id": "slTIsyBwXe9S"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -510,7 +521,7 @@
         "id": "ZZzRTq3TXgVb",
         "outputId": "c04e8657-5f41-4267-b074-f347bb55cf92"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +559,7 @@
       "metadata": {
         "id": "qwIY8MlkXh0O"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -563,7 +574,7 @@
         "id": "SgeEb3ZDXkCb",
         "outputId": "12854b0e-7fde-40bf-86a6-6685b514d888"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -596,7 +607,7 @@
       "metadata": {
         "id": "W3P9V7RjXljh"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -611,7 +622,7 @@
         "id": "oByEedgzXm_R",
         "outputId": "0c361beb-4ddd-4784-c500-07bede00c739"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,7 +651,7 @@
       "metadata": {
         "id": "NnhMA7fAXo_f"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -656,7 +667,7 @@
         "id": "ZESmtPcmXqVF",
         "outputId": "a1ef5cf2-a1cb-49b3-956d-34ae8428bdd6"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -686,7 +697,7 @@
         "id": "722U0OV4XrpI",
         "outputId": "83343147-9c7d-42dc-d3ae-409d594bf978"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
