--- a/colabs/llm_theo_lutz.ipynb
+++ b/colabs/llm_theo_lutz.ipynb
@@ -22,6 +22,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "click the 'Run all' button\n",
+        "\n",
+        "<img src = 'https://github.com/andjoer/llm_poetry_generation/blob/main/graphics/colab_en.jpg?raw=true'>\n",
+        "\n",
+        "German\n",
+        "\n",
+        "\n",
+        "\n",
+        "<img src = 'https://github.com/andjoer/llm_poetry_generation/blob/main/graphics/colab.jpg?raw=true'>"
+      ],
+      "metadata": {
+        "id": "91QWM1NGy9OK"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install transformers"
@@ -34,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "dkFCIitvM3NQ"
       },
@@ -72,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -269,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "9GEKYuevM3NW"
       },
@@ -315,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "YZIyH50tM3NZ"
       },
@@ -362,7 +379,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "9a6qQOkeM3Na"
       },
@@ -407,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "zWi4HleGM3Nc"
       },
@@ -472,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "yw5uHQn_M3Ne"
       },
@@ -545,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "dWszgcEFM3Nf"
       },
@@ -573,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "wWHxoZxkM3Nh"
       },
@@ -674,7 +691,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "qytTxj3mM3Ni"
       },
@@ -757,7 +774,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "TRL0dts-M3Nm"
       },
